client/src/pages/ProfilePage/sections/ProfileImg/ProfileImg.scss
@use "../../../../styles/partials/colors" as *;
@use "../../../../styles/partials/fonts" as *;
@use "../../../../styles/partials/mixins" as *;
@use "../../../../styles/global.scss" as *;

.profile-img {
    align-items: center;
    background-color: $primary-medium-blue;
    border-radius: .75rem;
    box-shadow: $shadow-tertiary;
    display: flex;
    flex-direction: column;
    padding: .75rem;
    width: 17.5rem;
    margin-bottom: 1.5rem;
    border: 4px solid $neutral-white;

    @include small-mobile {
        width: 20rem;
    }

    @include large-mobile {
        width: 25rem;
    }

    @include tablet {
        width: 29.5rem;
    }

    @include desktop {
        width: 31rem;
    }

    &__button-wrapper {
      display: flex;
      align-items: flex-end;
      justify-content: flex-start;
      gap: .5rem;
      margin-top: 1rem;
  }

    &__container {
        align-items: center;
        display: flex;
        flex-direction: column;
        position: relative;
    }

    &__wrapper {
        display: flex;
        flex-direction: row;
        gap: 1.5rem;
        align-items: flex-start; 
    }

    &__button-container {
        @include block-item(10rem, 2rem);
        display: flex;
        justify-content: flex-end;
        gap: .5rem;
        margin-left: 1.85rem;
    }

    &__card {
        border-radius: 6.25rem;
        height: 3rem;
        display: flex;
        align-items: center;
        justify-content: center;
        position: relative;
    }

    &__avatar {
        @include block-item(6rem, 6rem); 
        background-size: cover;
        border-radius: 6.25rem;
        border: 2.5px solid $neutral-white;
        box-shadow: $shadow-primary;
        position: relative;
        flex-shrink: 0;
    }

    &__ellipse-wrapper {
        @include block-item(.75rem, .75rem);
        box-shadow: $shadow-primary;
        position: relative; 
        top: 1.85rem; 
        right: 1.85rem; 
        cursor: pointer;
        z-index: 1; 
    }

    &__ellipse {
        @include block-item(.875rem, .875rem);
        background-color: $feedback-mint-green;
        border: 1px solid $neutral-white;
        border-radius: .4375rem;
    }

    &__ellipse--active {
        background-color: $feedback-mint-green;
    }

    &__ellipse--inactive {
        background-color: $neutral-light-grey;
    }

    &__content {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center; 
    }

    &__username {
        color: $neutral-white;
        font-family: $primary-font;
        font-size: 1rem;
        word-break: break-word;
        word-wrap: break-word;
        overflow-wrap: break-word;
        text-align: center; 
        max-width: 100%; 
    }

    &__status {
        align-self: stretch;
        color: $primary-pale-blue;
        font-family: $primary-font;
        font-size: .625rem;
        line-height: 1.25rem;
    }

    &__input {
        display: none;
    }

    &__button {
        @include block-item(1.5rem, 1.5rem);
        background-color: $primary-light-blue;
        border: 1.5px solid $neutral-white;
        box-shadow: $shadow-primary;
        border-radius: .5rem;
        color: $neutral-white;
        cursor: pointer;
        font-family: $primary-font;
        font-size: 1rem;
        display: flex;
        align-items: center;
        justify-content: center;
        margin-top: 0.5rem;

        &:hover {
            background-color: $primary-medium-blue;
        }

        &:active {
            background-color: $primary-dark-blue;
            transform: scale(0.9);
        }

        &::after {
            content: attr(data-tooltip);
            position: absolute;
            bottom: 30%;
            left: 60%;
            transform: translateY(-30%);
            background: $neutral-white;
            color: $primary-dark-blue;
            padding: 0.5rem 1rem;
            border-radius: 0.5rem;
            box-shadow: $shadow-tertiary;
            white-space: nowrap;
            opacity: 0;
            visibility: hidden;
            transition: opacity 0.3s ease, visibility 0.3s ease;
            font-size: 0.65rem;
            z-index: 10;

            @include tablet {
                font-size: 1rem;
            }
        }

        &:hover::after {
            opacity: 1;
            visibility: visible;
        }

        &:active::after {
          opacity: 0;
          visibility: hidden;
          transform: translateX(-20%) translateY(-90%);
        }

        &--delete {
            display: flex;
            justify-content: center;
            align-items: center;
            border-radius: 1.5rem;
            box-shadow: $shadow-primary;
        }
    }

    &__delete-icon {
        @include block-item(.85rem, .85rem);
    }

    &__upload-icon {
        @include block-item(.85rem, .85rem);
    }
}

